@@ -1,3 +1,13 @@
+2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Fix grub_pxe_scan.
+
+	* grub-core/fs/i386/pc/pxe.c (grub_pxe_pxenv): Put correct type bangpxe.
+	(grub_pxe_scan): Fix types and pxe_rm_entry computation.
+	All users updated.
+	* include/grub/i386/pc/pxe.h (grub_pxe_bangpxe): New struct.
+	(grub_pxe_pxenv): Correct type.
+
 2010-09-01  Colin Watson  <cjwatson@ubuntu.com>
 
 	* NEWS: Document most of the important changes since 1.98.
